[project]
name = "meteo_lt-pkg"
version = "0.4.0"
authors = [
  { name="Brunas", email="brunonas@gmail.com" },
]
description = "A library to fetch weather data from api.meteo.lt"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "aiohttp>=3.13",
]

[project.urls]
Homepage = "https://github.com/Brunas/meteo_lt-pkg"
Issues = "https://github.com/Brunas/meteo_lt-pkg/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.3",
    "black>=26.0",
    "coverage>=7.0",
    "flake8>=7.0",
    "pyflakes>=3.0",
    "pylint>=4.0",
    "build>=1.0"
]

[tool.black]
line-length = 120

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
